--- a/views/login.pug
+++ b/views/login.pug
@@ -5,8 +5,8 @@ block content
   form(method="post" action="/users/login")
     div.form-group
       label Username
-      input.form-control(type="text" placeholder="username")
+      input.form-control(type="text" name="username" placeholder="username")
     div.form-group
       label Password
-      input.form-control(type="password" placeholder="password")
+      input.form-control(type="password" name="password" placeholder="password")
     button.btn.btn-default(type="submit") submit
