--- a/views/layout.pug
+++ b/views/layout.pug
@@ -29,6 +29,8 @@ html
             div.alert.alert-success #{success_msg}
           unless error_msg == ''
             div.alert.alert-danger #{error_msg}
+          unless message == ''
+            div.alert.alert-danger #{message}
           if error
             div.alert.alert-danger #{error}
           
