Add and configures react and webpack.

--- a/views/register.pug
+++ b/views/register.pug
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+  div#register-form
   form(method="post" action="/users/register")
     div.form-group
       label Name
