--- a/views/register.pug
+++ b/views/register.pug
@@ -2,30 +2,11 @@ extends layout
 
 block content
   div#register-form
-  form(method="post" action="/users/register")
-    div.form-group
-      label Name
-      input.form-control(type="text" placeholder="name" name="name")
-    div.form-group
-      label Username
-      input.form-control(type="text"  placeholder="username" name="username")
-    div.form-group
-      label Email
-      input.form-control(type="email" placeholder="email" name="email")
-    div.form-group
-      label Password
-      input.form-control(type="password" placeholder="password" name="password")
-    div.form-group
-      label Confirm Password
-      input.form-control(
-        type="password"
-        placeholder="password"
-        name="password2" 
-      )
-    button.btn.btn-default(type="submit") submit
 
   if errors
     hr
     for error in errors
       div.alert.alert-danger
         != error.msg
+
+  script(src="/javascripts/register.js")
